Efmub-Ogy/src/objects/Ticket__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PNR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PNR</label>
        <referenceTo>PNR__c</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ticket_Number__c</fullName>
        <label>Ticket Number</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <label>Ticket</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TKT-{00000000}</displayFormat>
        <label>Ticket</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Ticket_Number_Is_Numeric</fullName>
        <active>true</active>
        <description>Ticket Number must contain 13 digits, numeric values only</description>
        <errorConditionFormula>OR
(
NOT(ISNUMBER(Ticket_Number__c)),
AND(ISNUMBER(Ticket_Number__c), LEN(Ticket_Number__c) &lt;&gt; 13)
)</errorConditionFormula>
        <errorMessage>Ticket Number must contain 13 digits, numeric values only</errorMessage>
    </validationRules>
</CustomObject>